fixing some overlap between css classes

--- a/src/MyList.scss
+++ b/src/MyList.scss
@@ -3,12 +3,12 @@
     padding: 0;
     box-sizing: border-box;
   }
-  body, html {
-    font-family: 'Quicksand', sans-serif;
-    width: 100%;
-    height: 100%;
+  // body, html {
+  //   font-family: 'Quicksand', sans-serif;
+  //   width: 100%;
+  //   height: 100%;
     
-  }
+  // }
   #background-image {
     background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, .7) ), url(https://images.pexels.com/photos/590493/pexels-photo-590493.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
     position: fixed;
